--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <!-- //////////////////////////////////////////////////////////////////////////////////// -->
 
  <!-- TODO RENAME CHECKPOINT-1-->
-  <body class="debug">
+  <body class="">
     
       
       <!-- TODO ADD STICKY NAVBAR  -->
